tests/negative/StdlibConflict/Input.juvix
module Input;

import Stdlib.Data.Bool open;

end;
